2006-06-04  Tom Tromey  <tromey@redhat.com>

	* sources.am, Makefile.in: Rebuilt.
	* Makefile.am (gcj_dbtool_LDADD): Add
	gnu-gcj-tools-gcj_dbtool.lo.
	(gcj_dbtool_SOURCES): Updated.
	(EXTRA_libgcj_la_SOURCES): New macro.
	* scripts/makemake.tcl (emit_package_rule): Compile class files
	from the package.
	(gcj_dbtool/Main.java, Class.java, Object.java): Removed
	package_map settings.
	(emit_package_rule): Special case gnu.gcj.tools.gcj_dbtool.

2006-06-04  Tom Tromey  <tromey@redhat.com>

	* java/lang/Class.java (getClassLoaderInternal): Now native.

2006-06-03  Paolo Bonzini  <bonzini@gnu.org>

	* scripts/jar.in: Ensure return with argument has non-empty argument.

2006-06-01  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac (ZIP, UNZIP): New programs.
	(JAR): Fall back to bash script.  Generate it.
	(BASH_JAR): New conditional.
	* Makefile.am (bin_SCRIPTS): New.
	* scripts/jar.in: New file.

2006-06-01  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/java/lang/MainThread (run): Revert exception chaining change.

2006-05-31  Bryce McKinlay  <mckinlay@redhat.com>

	* prims.cc (_Jv_RunMain): Use JvNewStringUTF for command-line class
	name, not Latin1.
	* gnu/java/lang/MainThread.java (run): Allow file separator char to
	be used in place of '.' as class-name separator. Don't chain
	ClassNotFoundException.

2006-05-31  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* java/lang/VMClassLoader.java (initialize): Set default library
	control to LIB_NEVER.

2006-05-31  Alan Modra  <amodra@bigpond.net.au>

	* stacktrace.cc (_Jv_StackTrace::UpdateNCodeMap): Don't add
	interpreted classes.

2006-05-30  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* scripts/makemake.tcl (emit_bc_rule): Do not skip
	gnu-java-awt-peer-gtk.lo.
	Include gnu/java/awt/peer/gtk Java objects in libgcj.so.  Use C++
	ABI for gnu/java/awt/peer/gtk package.
	* gnu/classpath/natSystemProperties.cc (PrependVersionedLibdir):
	New function.
	(insertSystemProperties): Only set java.ext.dirs if it is not