@@ -1,15 +1,0 @@
-// Simple compiler test.
-
-public class Case 
-{
-  public static int foo (int i, support.Case x)
-    {
-      switch (i)
-	{
-	case x.A:
-	  return 1;
-	default:
-	  return 0;
-	}
-    }
-}
