@@ -1,6 +1,0 @@
-package support;
-
-public class Case
-{
-  public static final int A = 9;
-}
